--- a/socket/.env
+++ b/socket/.env
@@ -1,2 +1,5 @@
+# PORT = 8080
+# FRONTEND_URL = "http://localhost:3000"
+
 PORT = 8080
-FRONTEND_URL = "http://localhost:3000"
+FRONTEND_URL = "https://exhibit-client.vercel.app/"
