--- a/server/models/vercel.json
+++ b/server/models/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "build" : {"src" : "*.js" , "use" : "@vercel/node"} , "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+{ "version": 2, "build" : {"src" : "*.js" , "use" : "@vercel/node"} , "rewrites": [{ "source": "/(.*)", "destination": "/(.*)" }] }
