--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
 # REACT_APP_SERVER_BASE_URL = "http://localhost:8000"
 # REACT_APP_SOCKET_BASE_URL = "http://localhost:8080"
 
-REACT_APP_SERVER_BASE_URL = "https://exhibit-server.vercel.app"
+REACT_APP_SERVER_BASE_URL = "https://exhibit-backend-rend.onrender.com"
 REACT_APP_SOCKET_BASE_URL = "https://exhibit-socket.vercel.app"
