socket url changed

--- a/client/.env
+++ b/client/.env
@@ -2,4 +2,4 @@
 # REACT_APP_SOCKET_BASE_URL = "http://localhost:8080"
 
 REACT_APP_SERVER_BASE_URL = "https://exhibit-backend-rend.onrender.com"
-REACT_APP_SOCKET_BASE_URL = "https://exhibit-socket.vercel.app"
+REACT_APP_SOCKET_BASE_URL = "https://exhibit-socket-rend.onrender.com"
